Closed Bug 189437 Opened 23 years ago Closed 23 years ago

Inbox not the first folder

Categories

(SeaMonkey :: MailNews: Message Display, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.3beta

People

(Reporter: bart.schelstraete, Assigned: sspitzer)

References

Details

(Keywords: regression)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030116 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030116 Inbox is not the first folder anymore in latest nightly build. Reproducible: Always Steps to Reproduce: 1.Create an IMAP account 2.Log in 3.You'll see that Inbox is not the first folder anymore Expected Results: Inbox should be the first folder.
As a matter of fact, all the folders are sorted. wfm in 2003011522 linux broken in 2003011622 linux.
That's not correct. This is the way they appear on my screen: >APIS Messages >Drafts >Helpdesk >Inbox >Sent >BSD >Hubs So it's not sorted by alfabet.
It must be a coincidence then. On my machine, they are sorted in alphabetical order (which is not the usual order though).
FYI: Installed the Windows nightly build, and the problem doesn't exist with that build. So it seems to be linux specific. rgrds, Bart
I am seeing the same problem here. I have 2 pop accounts setup. The default one is normal but the second one is out of order. WinXP SP1 - Build 2003011704
I'll look into it.
Status: NEW → ASSIGNED
Keywords: regression
Target Milestone: --- → mozilla1.3beta
Attached patch patchSplinter Review
rookie mistake. copy and pasted but didn't look at what I was doing.
will check in today.
OS: Linux → All
Hardware: PC → All
fixed. thanks to the reporter and darin for the heads up about this bug.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
from darin: "oh, you just checked in i can update and test FIXED thx!" verifying based on his comments to save esther (or nbaca?) some work.
Status: RESOLVED → VERIFIED
QA Contact: laurel → esther
I don't know if you already applied the patch on the latest Windows builds, but the problem also exists in latest build on Windows. (XP) Build id: 200311713 (not yet tested on Linux) See screenshot.
Windows XP - build id: 2003011713
Of course this bug is also on winxp (see the bug header "OS= ALL") and it's of course not fixed in your build: You build : 200311713 marked fixed : 2003-01-17 15:38
*** Bug 189618 has been marked as a duplicate of this bug. ***
It appears build 2003011808 the mail folders are back in their correct positions. hsavage@pobox.com
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: