fix for regression bug #189437 (that I caused). folders out of order in the folder pane. stupid copy and paste error.